<resources>
    <string name="app_name">Shikikan Companion</string>
    <string name="about">About</string>
    <string name="menuRecipe">Recipe Calculator</string>
    <string name="menuList">Tactical Doll List</string>
    <string name="menuLogistic">Logistic Calculator</string>
    <string name="menuBattery">Battery Calculator</string>
    <string name="menu">Menu</string>
    <string name="NumberDorms">Number of Dorms</string>
    <string name="Comfort">Total Comfort</string>
    <string name="Manpower">Manpower</string>
    <string name="Ammo">Ammo</string>
    <string name="Ration">Ration</string>
    <string name="Part">Part</string>
    <string name="recipeStandard">Standard Production</string>
    <string name="recipeHeavy">Heavy Production</string>
    <string name="hideNonEN">Hide Unreleased in EN</string>
    <string name="Calculate">Calculate</string>
    <string name="toggle">Toggle between normal and resources per hour</string>

    <!--Display Doll-->
    <string name="time">Time</string>
    <string name="obtain">Obtain</string>
    <string name="hp">HP</string>
    <string name="firepower">Firepower</string>
    <string name="evasion">Evasion</string>
    <string name="accuracy">Accuracy</string>
    <string name="rof">Rate of Fire</string>
    <string name="critical">Critical</string>
    <string name="ap">AP</string>
    <string name="speed">Speed</string>
    <string name="armor">Armor</string>
    <string name="clip">Clip</string>
    <string name="tile">Tile</string>
    <string name="skill">Skill</string>
    <string name="stats">Stats</string>

    <!--Logistics-->
    <string name="chapter0">Chapter 0</string>
    <string name="chapter1">Chapter 1</string>
    <string name="chapter2">Chapter 2</string>
    <string name="chapter3">Chapter 3</string>
    <string name="chapter4">Chapter 4</string>
    <string name="chapter5">Chapter 5</string>
    <string name="chapter6">Chapter 6</string>
    <string name="chapter7">Chapter 7</string>
    <string name="chapter8">Chapter 8</string>
    <string name="chapter9">Chapter 9</string>

    <string name="warning">Note: Logistics after Chapter 7 are not released yet in EN</string>
</resources>
