<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Information">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/List"
                    android:icon="@drawable/ammo"
                    android:title="@string/menuList" />

            </group>
        </menu>
    </item>
    <item android:title="Calculators">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/recipe"
                    android:icon="@drawable/ammo"
                    android:title="@string/menuRecipe" />
                <item
                    android:id="@+id/logistic"
                    android:icon="@drawable/manpower"
                    android:title="@string/menuLogistic" />
                <item
                    android:id="@+id/battery"
                    android:icon="@drawable/manpower"
                    android:title="@string/menuBattery" />
            </group>
        </menu>
    </item>
</menu>