<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/manpower_icon"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:background="@android:color/black"
                        android:src="@drawable/manpower"
                        android:contentDescription="@string/Manpower"/>

                    <EditText
                        android:id="@+id/manpower_input"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ammo_icon"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:background="@android:color/black"
                        android:src="@drawable/ammo"
                        android:contentDescription="@string/Ammo"/>

                    <EditText
                        android:id="@+id/ammo_input"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ration_icon"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:background="@android:color/black"
                        android:src="@drawable/ration" />

                    <EditText
                        android:id="@+id/ration_input"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/part_icon"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_below="@id/ration_icon"
                        android:background="@android:color/black"
                        android:src="@drawable/part" />

                    <EditText
                        android:id="@+id/part_input"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/production"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/standard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/recipeStandard" />

                    <RadioButton
                        android:id="@+id/heavy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipeHeavy" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/en_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hideNonEN"/>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Calculate"/>
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <android.support.design.widget.TabItem
                android:id="@+id/tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TabLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/displayResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.4">

                    <ListView
                        android:id="@+id/displayList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/displayR2N"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/displayR3N"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_bright"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/displayR4N"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_green_light"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/displayR5N"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_orange_light"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.6">

                    <!--<ListView-->
                        <!--android:id="@+id/displayR2T"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"/>-->

                    <!--<ListView-->
                        <!--android:id="@+id/displayR3T"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"/>-->

                    <!--<ListView-->
                        <!--android:id="@+id/displayR4T"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"/>-->

                    <!--<ListView-->
                        <!--android:id="@+id/displayR5T"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"/>-->
                    <TextView
                        android:id="@+id/displayR2T"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/displayR3T"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_bright"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/displayR4T"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_green_light"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/displayR5T"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_orange_light"
                        android:textSize="18sp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
